--- a/my_list.html
+++ b/my_list.html
@@ -1,6 +1,6 @@
-"Spongebob Squarepants"
-"Patrick Star"
-"Squidward Tentacles"
-"Eugene Harold Krabs"
-"Sandy Cheeks"
-"Sheldon J. Plankton"
+<li>"Spongebob Squarepants"</li>
+<li>"Patrick Star"</li>
+<li>"Squidward Tentacles"</li>
+<li>"Eugene Harold Krabs"</li>
+<li>"Sandy Cheeks"</li>
+<li>"Sheldon J. Plankton"</li>
